# robotframework-allure-example

./: index.html  pyproject.toml
.github/: allure.yaml
.github/workflows/: allure.yaml
8/: index.html
8/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
8/data/attachments/: bc6030a5da47db79.html
8/data/test-cases/: 7bc663f95174b37f.json  a333edf3a75515db.json  bb1b272ce34d251e.json
8/export/: influxDbData.txt  prometheusData.txt
8/history/: duration-trend.json  retry-trend.json
8/widgets/: categories-trend.json  environment.json  executors.json  severity.json  status-chart.json  summary.json
last-history/: history-trend.json  history.json
teste_init/: index.html
teste_init/10/: index.html
teste_init/10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
teste_init/10/export/: influxDbData.txt
teste_init/10/history/: history.json
teste_init/10/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
teste_init/11/: index.html
teste_init/11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
teste_init/11/export/: influxDbData.txt
teste_init/11/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
teste_init/12/: index.html
teste_init/13/: index.html
teste_init/14/: index.html
teste_init/15/: index.html
teste_init/9/: index.html
teste_init/last-history/: retry-trend.json
tests/: TestReportAllure.robot
(+110 files in other folders)
