[project]
name = "robotframework-allure-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Robot Courses",email = "git@robotcourses.com.br"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "robotframework (>=7.3.1,<8.0.0)",
    "allure-robotframework (>=2.14.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
